fix spacing

--- a/src/scss/frontend--style.scss
+++ b/src/scss/frontend--style.scss
@@ -1239,6 +1239,9 @@ body {
 		@media(max-width: $lg) {
 			margin-top: 50px;
 		}
+		@media(max-width: $md){
+			margin-top: 18px;
+		}
 	}
 
 	&-color {
@@ -2038,10 +2041,14 @@ body {
 	}
 
 	&__packs {
+		display: flex;
+		justify-content: center;
 		grid-gap: 30px;
+		width: auto;
 		gap: 30px;
 
 		@media(max-width: $lg) {
+			width: 100%;
 			margin-bottom: 30px;
 		}
 
@@ -2065,12 +2072,16 @@ body {
 
 	&__pack {
 		position: relative;
-		height: 322px;
+		height: calc(100vw * 322 / 1920);
 		overflow: hidden;
 
-		@media(max-width: 1850px) {
+		@media(max-width: $lg) {
+			flex-grow: 1;
+			width: auto;
 			max-width: 100%;
-			height: 360px;
+			height: 360px !important;
+			max-height: 360px !important;
+
 		}
 
 		@media(max-width: 1200px) {
@@ -2080,18 +2091,27 @@ body {
 
 		@media(max-width: $md) {
 			flex: 1;
-			height: 216px;
+			height: auto !important;
 		}
 
 		&--1 {
-			flex: 2;
+			width: calc(100vw * 562 / 1920);
+			height: auto;
+
+			&:before {
+				content: '';
+				display: block;
+				width: 100%;
+				padding-bottom: calc(100% * 322 / 562);
+			}
 		}
 
 		&--2 {
-			flex: 1;
-			min-width: 332px;
+			width: calc(100vw * 332 / 1920);
+			height: auto;
 
-			@media(max-width: 1850px) {
+			@media(max-width: $lg) {
+				flex-grow: 1;
 				min-width: 372px;
 			}
 
@@ -2101,8 +2121,16 @@ body {
 				bottom: 15px;
 				width: 107px;
 				min-width: 0px;
-				height: 107px;
+				height: 107px !important;
 				border: 1px solid #fff;
+			}
+
+
+			&:before {
+				content: '';
+				display: block;
+				width: 100%;
+				padding-bottom: calc(100% * 322 / 332);
 			}
 		}
 
@@ -2116,22 +2144,33 @@ body {
 	}
 
 	&__block {
-		@media(max-width: 1850px) {
+		justify-content: center;
+
+		@media(max-width: $lg) {
 			flex-wrap: wrap;
 			width: 100%;
-			max-width: 1100px;
+			// max-width: 1100px;
 			margin: 0 auto;
 		}
 	}
 
 	&__info {
-		width: 500px;
-		min-width: 500px;
-		padding-right: 60px;
-		padding-left: 110px;
+		width: calc(100vw * 500 / 1920);
+		min-width: calc(100vw * 500 / 1920);
+		padding-right: calc(100vw * 60 / 1920);
+		padding-left: calc(100vw * 110 / 1920);
 		background: #1E1E1E;
 
-		@media(max-width: 1850px) {
+		@media(max-width: 1700px) {
+			padding-right: calc(100vw * 40 / 1920);
+			padding-left: calc(100vw * 40 / 1920);
+
+			* {
+				font-size: 14px;
+			}
+		}
+
+		@media(max-width: $lg) {
 			width: 100%;
 			min-width: 0;
 			max-width: 100%;
@@ -2471,6 +2510,10 @@ body {
 		}
 
 		@media(max-height:900px) {
+			height: 612px;
+		}
+
+		@media(max-height:800px) {
 			height: 512px;
 		}
 
